1. refine CMakeList.txt script 2. fix build error in vs2013, vs2015 and clang3.3 3. support android build. 4. add sample code and test code.

--- a/ptest/CMakeLists.txt
+++ b/ptest/CMakeLists.txt
@@ -26,10 +26,9 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} cpp-sdk${STATIC_LIB_SUFFIX})	
 target_link_libraries(${PROJECT_NAME} ${CRYPTO_LIBS})
 target_link_libraries(${PROJECT_NAME} ${CLIENT_LIBS})
-if (${TARGET_ARCH} STREQUAL "LINUX")
+if (${TARGET_OS} STREQUAL "LINUX")
 target_link_libraries(${PROJECT_NAME} pthread)	
 endif()
 
-set(CMAKE_CXX_STANDARD 11)
 target_compile_options(${PROJECT_NAME} 
 	PRIVATE "${SDK_COMPILER_FLAGS}")
