--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,7 @@ file(GLOB test_presignedurl_src "src/PresignedUrl/*")
 file(GLOB test_multipartupload_src "src/MultipartUpload/*")
 file(GLOB test_resumable_src "src/Resumable/*")
 file(GLOB test_other_src "src/Other/*")
+file(GLOB test_livechannel_src "src/LiveChannel/*")
 	
 add_executable(${PROJECT_NAME} 
 	${test_main_src}
@@ -36,7 +37,8 @@ add_executable(${PROJECT_NAME}
 	${test_presignedurl_src}
 	${test_multipartupload_src}
 	${test_resumable_src}
-	${test_other_src})
+	${test_other_src}
+	${test_livechannel_src})
 
 target_include_directories(${PROJECT_NAME}
 	PRIVATE ${CMAKE_SOURCE_DIR}/sdk/include
