cmake: refine cmake target name for better integration
The previous target name is `cpp-sdk` which is quite confusing for
higher level applications. We should rename the target name with
`oss-cpp-sdk` and thus all related CMake scrips should be also changed.

Signed-off-by: Roy Guo <royguo1988@gmail.com>

--- a/sdk/CMakeLists.txt
+++ b/sdk/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-project(cpp-sdk VERSION ${version})
+project(oss-cpp-sdk VERSION ${version})
 
 configure_file(src/Config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/alibabacloud/oss/Config.h @ONLY)
 
