--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ file(STRINGS "VERSION" version)
 project(alibabacloud-oss-cpp-sdk VERSION ${version})
 message(STATUS "Project version: ${PROJECT_VERSION}")
 set(SDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
-set(TARGET_OUTPUT_NAME_PREFIX "alibabacloud-oss-" CACHE STRING "The target's output name prefix")
+set(TARGET_OUTPUT_NAME_PREFIX "alibabacloud-" CACHE STRING "The target's output name prefix")
 
 #Options
 option(BUILD_SHARED_LIBS  "Enable shared library" OFF)
