cmake: fix CMake sample/tests/ptests include dir
When using CMake target directly inside another CMakeLists, the
sample & tests may not build due to wrong include path.

Signed-off-by: Roy Guo <royguo1988@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 file(STRINGS "VERSION" version)
 project(alibabacloud-oss-cpp-sdk VERSION ${version})
 message(STATUS "Project version: ${PROJECT_VERSION}")
-set(SDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
+set(OSS_SDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
 set(TARGET_OUTPUT_NAME_PREFIX "alibabacloud-oss-" CACHE STRING "The target's output name prefix")
 
 #Options
