--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -43,7 +43,7 @@ add_executable(${PROJECT_NAME}
 	${sample_encryption_src})
 
 target_include_directories(${PROJECT_NAME}
-	PRIVATE ${CMAKE_SOURCE_DIR}/sdk/include)
+ PRIVATE ${OSS_SDK_ROOT}/sdk/include)
 
 target_link_libraries(${PROJECT_NAME} cpp-sdk)	
 target_link_libraries(${PROJECT_NAME} ${CRYPTO_LIBS})
