--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,9 @@ if (CMAKE_CROSSCOMPILING)
 	if (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
 		set(PLATFORM_ANDROID 1)
 		set(TARGET_OS "ANDROID")
+	elseif(CMAKE_HOST_UNIX)
+		set(PLATFORM_LINUX 1)
+		set(TARGET_OS "LINUX")
 	else()
 		message(FATAL_ERROR "Do not support target platform")
 	endif()
@@ -78,7 +81,12 @@ if (${TARGET_OS} STREQUAL "WINDOWS")
 	set(CLIENT_INCLUDE_DIRS 
 		${CMAKE_SOURCE_DIR}/third_party/include) 
 else()
-	include(FindCURL)
+	if(NOT DEFINED CURL_LIBRARIES)
+		include(FindCURL)
+	else()
+		find_package(CURL CONFIG REQUIRED)
+	endif()
+
 	include(FindOpenSSL)
 
 	if(NOT CURL_FOUND)
