fix typo of FindOpenSSL output variable
The FindOpenSSL CMake module will output the `OPENSSL_INCLUDE_DIR` variable instead of `OPENSSL_INCLUDE_DIRS`. So with wrong variable name here, custom openssl installation will not be detected correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ else()
 	endif()
 
 	set(CRYPTO_LIBS ${OPENSSL_LIBRARIES})
-	set(CRYPTO_INCLUDE_DIRS ${OPENSSL_INCLUDE_DIRS}) 
+	set(CRYPTO_INCLUDE_DIRS ${OPENSSL_INCLUDE_DIR}) 
 	set(CRYPTO_LIBS_ABSTRACT_NAME crypto ssl)
 
 	set(CLIENT_LIBS ${CURL_LIBRARIES})
