fix: m1 mac cross build x86_64 problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,9 @@ if (CMAKE_CROSSCOMPILING)
 	if (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
 		set(PLATFORM_ANDROID 1)
 		set(TARGET_OS "ANDROID")
+	elseif(CMAKE_HOST_APPLE)
+		set(PLATFORM_APPLE 1)
+		set(TARGET_OS "APPLE")
 	else()
 		message(FATAL_ERROR "Do not support target platform")
 	endif()
