support builder pattern for OssClient.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ file(GLOB test_resumable_src "src/Resumable/*")
 file(GLOB test_other_src "src/Other/*")
 file(GLOB test_livechannel_src "src/LiveChannel/*")
 file(GLOB test_encryption_src "src/Encryption/*")
+file(GLOB test_authorization_src "src/Authorization/*")
 	
 add_executable(${PROJECT_NAME} 
 	${test_main_src}
@@ -40,7 +41,9 @@ add_executable(${PROJECT_NAME}
 	${test_resumable_src}
 	${test_other_src}
 	${test_livechannel_src}
-	${test_encryption_src})
+	${test_encryption_src}
+	${test_authorization_src}
+)
 
 target_include_directories(${PROJECT_NAME}
 	PRIVATE ${CMAKE_SOURCE_DIR}/sdk/include
