--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -2,9 +2,9 @@ name:  macOS Monterey 12
 
 on:
   push:
-    branches: [ master]
+    branches: [ master, add_build_ci ]
   pull_request:
-    branches: [ master]
+    branches: [ master, add_build_ci ]
     
 jobs:
   build:
