--- a/.github/workflows/linux-clang.yml
+++ b/.github/workflows/linux-clang.yml
@@ -2,9 +2,9 @@ name: Ubuntu (clang)
 
 on:
   push:
-    branches: [ master, add_build_ci ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, add_build_ci ]
+    branches: [ master ]
     
 jobs:
   build:
