--- a/.github/workflows/linux-gcc.yml
+++ b/.github/workflows/linux-gcc.yml
@@ -17,7 +17,11 @@ jobs:
     steps:
     - name: check out
       uses: actions/checkout@v3
-    
+
+    - name: Install Dependencies
+      run: |
+        sudo apt-get install curl libssl-dev libcurl4-openssl-dev
+
     - name: checkout gcc version
       run: gcc --version
 
