--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ option(BUILD_SAMPLE "Build sample" ON)
 option(BUILD_TESTS "Build unit and perfermence tests" ON)
 option(ENABLE_COVERAGE "Flag to enable/disable building code with -fprofile-arcs and -ftest-coverage. Gcc only" OFF)
 option(ENABLE_RTTI "Flag to enable/disable building code with RTTI information" ON)
-option(USE_COROUTINE "Use C++ 20 coroutine" ON)
+option(USE_COROUTINE "Use C++ 20 coroutine" OFF)
 if (USE_COROUTINE)
 	set(CPP_STANDARD "20" CACHE STRING "Set C++ standard 20.")
 else()
