--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -19,11 +19,8 @@ jobs:
     - name: check out
       uses: actions/checkout@v3
 
-    - name: Install Dependencies
-      run: HOMEBREW_NO_INSTALL_CLEANUP=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install openssl
-
     - name: configure cmake
-      run:  OPENSSL_ROOT_DIR=/usr/local/opt/openssl@3 CXX=clang++ CC=clang cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ matrix.mode }} -DCPP_STANDARD=${{ matrix.cpp_version }}
+      run:  CXX=clang++ CC=clang cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ matrix.mode }} -DCPP_STANDARD=${{ matrix.cpp_version }}
       
     - name: build project
       run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.mode }}
