--- a/.github/workflows/linux-clang.yml
+++ b/.github/workflows/linux-clang.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        sudo apt-get update 
         sudo apt-get install curl libssl-dev libcurl4-openssl-dev
               
     - name: configure cmake
